src/main/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jfr-sb-app
  name: jfr-sb-app
  namespace: cryostat
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jfr-sb-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jfr-sb-app
        deployment: jfr-sb-app
    spec:
      containers:
      - image: quay.io/balki404/jfr-sb-app:1.0.1
        imagePullPolicy: IfNotPresent
        name: jfr-sb-app
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: quay
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
