src/main/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jfr-sb-app
  labels:
    app: jfr-sb-app
spec:
  path: /
  to:
    kind: Service
    name: jfr-sb-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
